--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==2.0.1
-werkzeug==2.0.3
-requests==2.26.0
-python-dotenv==0.19.0
+flask==2.3.3
+werkzeug==2.3.7
+requests==2.31.0
+python-dotenv==1.0.0
 qrcode==7.4.2
-Pillow==9.5.0
+Pillow==10.0.0
 pyOpenSSL==23.2.0
 flask-login==0.6.2
 flask-wtf==1.1.1
-email-validator==2.0.0 
+email-validator==2.0.0
+gunicorn==21.2.0 
