Add serverless support and update deployment configuration
- Integrated serverless-http in app.py for serverless deployment.
- Updated requirements.txt to include serverless-http package.
- Modified vercel.json to use wsgi.py instead of app.py for deployment.
- Created wsgi.py to serve as the entry point for Vercel, referencing the Flask app.

--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "app.py",
+            "src": "wsgi.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app.py"
+            "dest": "wsgi.py"
         }
     ],
     "env": {
-        "FLASK_ENV": "production"
-    },
-    "functions": {
-        "app.py": {
-            "memory": 1024,
-            "maxDuration": 10
-        }
+        "FLASK_ENV": "production",
+        "FLASK_APP": "wsgi.py"
     }
 } 
