--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ pyOpenSSL==23.2.0
 flask-login==0.6.2
 flask-wtf==1.1.1
 email-validator==2.0.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+serverless-http==3.2.0 
